# wasm-plugin

./: Cargo.toml  Makefile  README.md
engine/: Cargo.toml
engine/src/: main.rs
plugin/: Cargo.toml
plugin/src/: lib.rs
wit/: recorder-plugin.wit
